--- a/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
+++ b/workflows/pi_correspondence/email_templates_pi_faqs.Rmd
@@ -3,13 +3,20 @@
 ### Data
 *Q: I would like to / have already uploaded data to ____ repository*
 
-Generalist repository
+- Review the repository, does it issue persistent identifiers (ie. DOIs)?
+- Do they say how long they will be commiting to storing the data?
+
+If the answer is no to either questions, we will need to document and store any files in our own system. If any of this is unclear from what you can find online, you can message Matt to discuss with NSF if a particular repository will be allowed.
+
+**Possible response for a generalist repository**
 
 > If your data doesn't require features that only ____ provides, we would encourage you to consider publishing both the data and the metadata at the Arctic Data Center. Some benefits to submitting to us includes:
 
 - We provide a DOI that can be cited in your published papers
 - We track where datasets are being cited
 - By submitting both the data and metadata to us, you can fulfill your NSF reporting requirements at the same time. This will reduce the work needed on your part to get any additional metadata requirements for NSF.
+
+
 
 *Q: Can I replace data that have already been uploaded and keep the DOI?* 
 
