--- a/training/02_creating_a_data_package.Rmd
+++ b/training/02_creating_a_data_package.Rmd
@@ -104,7 +104,7 @@ If you are curious how everything magically works, here is a handy diagram:
 ```{r, child = '../workflows/edit_data_packages/01_datapack_background.Rmd'}
 ```
 
-### Exercise 2a {.exercise}
+## Exercise 2a {.exercise}
 
 Select a dataset from the catalog on arcticdata.io and checkout the number of files and provenance relationships in the dataset.
 
