add references to advanced

--- a/training/10_advanced.Rmd
+++ b/training/10_advanced.Rmd
@@ -2,8 +2,15 @@
 
 This section is meant to be read after you have processed a couple of tickets and you are comfortable with the workflow with a relatively simple dataset with 1-2 files and want to expand your skills and workflows further.
 
+## Working with large data packages
+
+```{r, child = '../workflows/edit_eml/use_references.Rmd'}
+```
+
 ```{r, child = '../workflows/adc_web_submissions/add_physicals_to_submissions.Rmd'}
 ```
+
+## Streamlining your workflow
 
 ```{r, child = '../workflows/miscellaneous/code_snippets.Rmd'}
 ```
