--- a/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/C_additional_email_templates.Rmd
@@ -10,6 +10,41 @@ If the PI needs a DOI right away:
 
 > We can provide you with a pre-assigned DOI that you can reference in your paper, as long as your submission is not facing a deadline from NSF for your final report. However, please note that it will not become active until after we have finished processing your submission and the package is published. Once you have your dataset published, we would appreciate it if you could register the DOI of your published paper with us by using the citations button beside the orange lock icon. We are working to build our catalog of dataset citations in the Arctic Data Center.
 
+#### Sensitive Data
+
+>Which of the following categories best describes the level of
+sensitivity of your data?
+
+> A. Non-sensitive data None of the data includes sensitive or protected
+information. Proceed with uploading data.
+B. Some or all data is sensitive but has been made safe for open
+distribution Sensitive data has been de-identified, anonymized, aggregated,
+or summarized to remove sensitivities and enable safe data distribution.
+Examples include ensuring that human subjects data, protected species data,
+archaeological site locations and personally identifiable information have
+been properly anonymized, aggregated and summarized. Proceed with uploading
+data, but ensure that only data that are safe for public distribution are
+uploaded. Address questions about anonymization, aggregation,
+de-identification, and data embargoes with the data curation support team
+before uploading data. Describe these approaches in the Methods section.
+C. Some or all data is sensitive and should not be distributed The data
+contains human subjects data or other sensitive data. Release of the data
+could cause harm or violate statutes, and must remain confidential
+following restrictions from an Institutional Review Board (IRB) or similar
+body. Do NOT upload sensitive data. You should still upload a metadata
+description of your dataset that omits all sensitive information to inform
+the community of the dataset's existence. Contact the data curation support
+team about possible alternative approaches to safely preserve sensitive or
+protected data.
+
+> 2. Ethical Research Procedures. Please describe how and the extent to which
+data collection procedures followed community standards for ethical
+research practices (e.g., CARE Principles). Be explicit about Institutional
+Review Board approvals, consent waivers, procedures for co-production, data
+sovereignty, and other issues addressing responsible and ethical research.
+Include any steps to anonymize, aggregate or de-identify the dataset, or to
+otherwise create a version for public distribution.
+
 #### Asking for dataset access
 > As a security measure we ask that we get the approval from the original submitter of the dataset prior to granting edit permissions to all datasets. 
 
