--- a/training/04_editing_eml.Rmd
+++ b/training/04_editing_eml.Rmd
@@ -15,8 +15,19 @@ This chapter will be longest of all the sections! This is a reminder to take fre
 
 The result of these function calls won't show up on the webpage but they will add a `publisher` element to the `dataset` element and a `system` to all of the entities based on what the PID is. This will help make our metadata more FAIR (Findable, Accessible, Interoperable, Reusable). 
 
-Add the following lines to all of your data processing scripts.
+These two functions come from the `arcticatautils` package, an R package we wrote to help with some very specific data processing tasks.
+
+To install `arcticdatautils`, run this:
+
+```
+devtools::install_github("NCEAS/arcticdatautils")
+```
+
+Then add these to all of your EML processing scripts.
+
 ```{r, eval= FALSE}
+  library(arcticdatautils)
+
   doc <- eml_add_publisher(doc)
   doc <- eml_add_entity_system(doc)
 ```
