--- a/workflows/edit_eml/set_physical.Rmd
+++ b/workflows/edit_eml/set_physical.Rmd
@@ -7,13 +7,8 @@ The word ‘physical’ derives from database systems, which distinguish the ‘
 ```
 
 ```{r, eval = FALSE}
-physical <- arcticdatautils::pid_to_eml_physical(mn, pkg$data[[i]])
-```
-
-Alternatively, you can set the `physical` of a data object not yet in your package by simply inputting the data `PID`:
-
-```{r, eval = FALSE}
-physical <- arcticdatautils::pid_to_eml_physical(mn, "your_data_pid")
+data_pid <- selectMember(dp, name = "sysmeta@fileName", value = "your_file_name.csv")
+physical <- arcticdatautils::pid_to_eml_physical(mn, data_pid)
 ```
 
 The `physical` must then be assigned to the data object.
