--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -63,6 +63,11 @@ Check out their individual calendar entries and channels for more information
 * NCEAS Diversity Team
 * NCEAS Book Club - #bookclub
 
+## Internship Expectations {-}
+As an intern with the data team, there are a few expectations that the Project Coordinators have of you. Overall, we expect you to be communicative and proactive. We want you to learn and grow in this position, but we don't want you spinning your wheels going nowhere fast! If you've spent 10-15 minutes on an issue and you're not making any progress, reach out to us and your peers for help in the #datateam slack channel. The #datateam slack channel is the main form of communication, and we expect all interns to become comfortable communicating in this space. 
+
+Additionally, we expect interns to work within the standard business hours of 8am - 5pm (pacific time). We ask that you mark your expected work hours on the shared "Intern" Google Calendar. This is so that the Project Coordinators are aware of who's working day-to-day and can plan their days accordingly. We also use this to verify time sheets when they are submitted. Ideally, interns would input their proposed hours on the calendar at least one week in advance. During exams and other unusually busy weeks at school, we understand you may need to shift your hours or reduce your workload. When this occurs, please make sure to email either Daphne or Jeanette so that we know not to expect you during your usual schedule.
+
 ## Code of Conduct {-}
 
 Take a moment to review the [diversity and inclusion page](https://www.nceas.ucsb.edu/diversity-inclusion) and [code of conduct](https://live-ncea-ucsb-edu-v01.pantheonsite.io/sites/default/files/2020-02/NCEAS_Code-of-Conduct_2019.pdf) at NCEAS so that we can foster an environment that is safe, welcoming and inclusive for everyone.
